npm build:tailwind funcional con input de informacion agregada.Figuras con rounded posicionadas de manera correcta

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build:tailwind": "tailwind build  src/style.css -o public/style.css"
+    "build:tailwind": "tailwind build -i src/style.css -o public/style.css"
   },
   "keywords": [],
   "author": "",
